# python-adblock

./: .gitignore  CHANGELOG.md  Cargo.toml  pyproject.toml
.github/workflows/: ci.yml
adblock/: adblock.pyi
src/: lib.rs
tests/: test_exceptions.py  test_redirect.py  test_repr.py
