[package]
publish = false
name = "adblock"
version = "0.6.0"
edition = "2018"
authors = ["Árni Dagur <arni@dagur.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ArniDagur/python-adblock"
repository = "https://github.com/ArniDagur/python-adblock"

[profile.release]
debug = true

[dependencies]
adblock = { version = "=0.13.2", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver", "css-validation"] }
pyo3 = { version = "0.28", features = ["abi3-py37", "extension-module"] }

[lib]
name = "adblock"
crate-type = ["rlib", "cdylib"]
